[metadata]
name = jadn
version = attr: jadn.__version__
url = https://github.com/davaya/jadn-pypkg
description = JADN schema tools
long_description = file: README.rst
long_description_content_type = text/x-rst
author = David Kemp
author_email = dk190a@gmail.com
# license =
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Topic :: Software Development :: Build Tools
keywords =
  schema
python_requires = ">=3.6"

[options]
package_dir =
  = src
packages = jadn
install_requires =
  jsonschema
  rfc3987
  lxml

[options.package_data]
  jadn = data/*.*

[bdist_wheel]
universal = 1