[metadata]
name = jadn
version = attr: jadn.__version__
url = https://github.com/davaya/jadn-pypkg
description = JADN schema tools
long_description = file: README.rst
long_description_content_type = text/x-rst
author = David Kemp
author_email = dk190a@gmail.com
license = Apache License 2.0
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Topic :: Software Development :: Build Tools
keywords =
  schema
python_requires = ">=3.8"

[options]
package_dir =
  = src
packages = jadn, jadn.codec, jadn.convert, jadn.transform, jadn.translate
install_requires =
  dataclasses; python_version < '3.7'
  jsonschema
  lxml
  rfc3987

[options.package_data]
jadn = data/*.*

[bdist_wheel]
universal = 1